Updated and fixed dark mode functionality

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
@@ -18,6 +19,9 @@ button {
   margin: 10px 0;
   padding: 6px 10px;
   border-radius: 15px;
+}
+
+.first-dark-mode-button {
   border: 1px solid black;
   background-color: black;
   color: white;
@@ -28,9 +32,29 @@ button {
   color: white;
 }
 
-.dark-container button {
+.second-dark-mode-button {
   background-color: white;
   color: black;
+  border: 1px solid white;
+}
+
+.colourful-container {
+  background-color: blueviolet;
+}
+
+.colourful-container h1 {
+  color: yellow;
+}
+
+.colourful-container button {
+  background-color: red;
+  color: yellow;
+  border: 1px solid black;
+  font-weight: bold;
+}
+
+.colourful-container p {
+  color: orange;
 }
 
 .dark-mode {
@@ -38,7 +62,7 @@ button {
   color: white;
 }
 
-.dark-mode button {
+.dark-mode .first-dark-mode-button {
   background-color: white;
   color: black;
 }
@@ -48,7 +72,7 @@ button {
   color: black;
 }
 
-.dark-mode .dark-container button {
+.dark-mode .second-dark-mode-button {
   background-color: black;
   color: white;
 }
